--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p>Please let us know how we did with your support request. All feedback is appreciated 
             to help us improve our offering!</p>
 
-        <form action="">
+        <form action="/">
             <input type="radio" name="rate" id="1" value="1">
             <label for="1">1</label>
             <input type="radio" name="rate" id="2" value="2">
